--- a/ClientApp/src/app/app.component.html
+++ b/ClientApp/src/app/app.component.html
@@ -1,1 +1,20 @@
-<h1>{{title}}</h1>
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
+
+<div class="container-fluid">
+    <header class="row primary-color">
+      <div class="col text-left">
+          <span class='title-box no-select'>Generative<b>DAW</b></span>
+      </div>
+      <div class="col text-right">
+          <a id='github-link' href="https://github.com/ZakirG/generative-daw" target="_blank">
+            <img src="/assets/GitHub-Mark.png">
+          </a>
+      </div>
+      <div class="row secondary-color" id="control-bar">
+          <div class="col-sm-6"></div>
+          <div class="col-sm-6"></div>
+      </div>
+    </header>
+    <!-- application goes here -->
+</div>
