--- a/ClientApp/src/app/app.component.html
+++ b/ClientApp/src/app/app.component.html
@@ -1,20 +1,27 @@
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
+<link data-require="bootstrap-css@3.3.6" data-semver="3.3.6" rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.css" />
 
 <div class="container-fluid">
     <header class="row primary-color">
-      <div class="col text-left">
-          <span class='title-box no-select'>Generative<b>DAW</b></span>
-      </div>
-      <div class="col text-right">
-          <a id='github-link' href="https://github.com/ZakirG/generative-daw" target="_blank">
-            <img src="/assets/GitHub-Mark.png">
-          </a>
-      </div>
-      <div class="row secondary-color" id="control-bar">
-          <div class="col-sm-6"></div>
-          <div class="col-sm-6"></div>
-      </div>
+        <div class="col text-left">
+            <span class='title-box no-select'>
+                <a id='github-link' href="https://github.com/ZakirG/generative-daw" target="_blank">
+                  <img src="/assets/GitHub-Mark.png">
+                </a>
+                Generative<b>DAW</b>
+            </span>
+            <button id='play-button' class='top-bar-button'>
+                <span class='glyphicon glyphicon-play'></span>
+            </button>
+            <button id='play-button' class='top-bar-button'>
+                <span class='glyphicon glyphicon-pause'></span>
+            </button>
+        </div>
+        <div class="row secondary-color" id="control-bar">
+            <div class="col-sm-6"></div>
+            <div class="col-sm-6"></div>
+        </div>
     </header>
     <!-- application goes here -->
 </div>
