Drew a CSS piano roll

--- a/ClientApp/src/app/app.component.html
+++ b/ClientApp/src/app/app.component.html
@@ -23,5 +23,5 @@
             <div class="col-sm-6"></div>
         </div>
     </header>
-    <!-- application goes here -->
+    <piano-roll></piano-roll>
 </div>
