--- a/ClientApp/src/app/piano-roll.component.html
+++ b/ClientApp/src/app/piano-roll.component.html
@@ -2,61 +2,20 @@
     <div class="col-1 piano">
         <div class='piano-keys'>
             <ul class="piano-key-set">
-                <li class="white b2"></li>
-                <li class="black as2"></li>
-                <li class="white a2"></li>
-                <li class="black gs2"></li>
-                <li class="white g2"></li>
-                <li class="black fs2"></li>
-                <li class="white f2"></li>
-                <li class="white e2"></li>
-                <li class="black ds2"></li>
-                <li class="white d2"></li>
-                <li class="black cs2"></li>
-                <li class="white c2"></li>
-
-                <li class="white b1"></li>
-                <li class="black as1"></li>
-                <li class="white a1"></li>
-                <li class="black gs1"></li>
-                <li class="white g1"></li>
-                <li class="black fs1"></li>
-                <li class="white f1"></li>
-                <li class="white e1"></li>
-                <li class="black ds1"></li>
-                <li class="white d1"></li>
-                <li class="black cs1"></li>
-                <li class="white c1"></li>
+                <li *ngFor="let note of notes"
+                class="{{ note.color }} {{ note.note }}" attr.data-octave="{{ note.octave }}"></li>
             </ul>
         </div>
     </div>
     <div class='col note-grid'>
         <ul class='note-rows'>
-            <li class="white b"></li>
-            <li class="black as"></li>
-            <li class="white a"></li>
-            <li class="black gs"></li>
-            <li class="white g"></li>
-            <li class="black fs"></li>
-            <li class="white f"></li>
-            <li class="white e"></li>
-            <li class="black ds"></li>
-            <li class="white d"></li>
-            <li class="black cs"></li>
-            <li class="white c"></li>
+            <li *ngFor="let note of gridState"
+                class="{{ note.color }} {{ note.note }}" attr.data-octave="{{ note.octave }}">
+                <span class='grid-state'
+                    *ngFor="let state of note.timeStates" [style.width]="note.stateWidth"
+                    attr.data-active="{{ state }}"></span>
 
-            <li class="white b"></li>
-            <li class="black as"></li>
-            <li class="white a"></li>
-            <li class="black gs"></li>
-            <li class="white g"></li>
-            <li class="black fs"></li>
-            <li class="white f"></li>
-            <li class="white e"></li>
-            <li class="black ds"></li>
-            <li class="white d"></li>
-            <li class="black cs"></li>
-            <li class="white c"></li>
+            </li>
         </ul>
      </div>
 </div>
