--- a/ClientApp/src/app/piano-roll.component.css
+++ b/ClientApp/src/app/piano-roll.component.css
@@ -1,3 +1,22 @@
+.action-button {
+    background:#c6f7ff;
+    border: solid #1d626d 1px;
+    color:#1d626d;
+    padding:5px 10px;
+    border-radius:2px;
+    font-size:12px;
+    margin:10px 10px 0 5px;
+    transition:color .2s, border-color .2s;
+    -webkit-transition:color .2s, border-color .2s;
+    -moz-transition:color .2s, border-color .2s;
+}
+
+.action-button:hover {
+    border-color: black;
+    color: black;
+}
+
+
 .piano-roll {
     padding:5px;
     margin: 10px 0px;
