--- a/ClientApp/src/app/piano-roll.component.html
+++ b/ClientApp/src/app/piano-roll.component.html
@@ -1,3 +1,12 @@
+<div class="row">
+    <div class="col">
+        <button class="action-button" id="clear-button" (click)="clearPianoRoll()">
+            <span class='glyphicon glyphicon-trash'></span>
+            CLEAR
+        </button>
+    </div>
+</div>
+
 <div class="row piano-roll">
     <div class="col-1 piano">
         <div class='piano-keys'>
