--- a/ClientApp/src/app/app.component.html
+++ b/ClientApp/src/app/app.component.html
@@ -12,7 +12,7 @@
                 Generative<b>DAW</b>
             </span>
             <div class='control-panel'>
-                <button id='play-button' class='top-bar-button'>
+                <button id='play-button' class='top-bar-button' (click)="togglePlayState()">
                     <span class='glyphicon glyphicon-play'></span>
                 </button>
                 <button id='play-button' class='top-bar-button'>
