When you add a note, the note is played

--- a/ClientApp/src/app/app.component.html
+++ b/ClientApp/src/app/app.component.html
@@ -27,5 +27,5 @@
             <div class="col-sm-6"></div>
         </div>
     </header>
-    <piano-roll></piano-roll>
+    <piano-roll (noteDrawn)="playNoteDrawn($event)"></piano-roll>
 </div>
