--- a/ClientApp/src/app/piano-roll.component.html
+++ b/ClientApp/src/app/piano-roll.component.html
@@ -16,26 +16,28 @@
     <div class="modal-dialog" role="document">
         <div class="modal-content">
             <div class="modal-header">
-                <h5 class="modal-title">Generate Composition</h5>
+                <h5 class="modal-title">Configure generation</h5>
                 <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                     <span aria-hidden="true">&times;</span>
                 </button>
             </div>
             <div class="modal-body">
-                What would you like to generate?
-                <label class="custom-radio-button">
-                    <input type="radio" checked="checked" name="generation-type">A chord progression
-                    <span class="checkmark"></span>
-                </label>
+                 <form #f="ngForm">
+                    What would you like to generate?
+                    <label class="custom-radio-button">
+                        <input [(ngModel)]="generationType" type="radio" value="melody" checked="checked" name="generationType">A melody
+                        <span class="checkmark"></span>
+                    </label>
 
-                <label class="custom-radio-button">A melody
-                    <input type="radio" name="generation-type">
-                    <span class="checkmark"></span>
-                </label>
+                    <label class="custom-radio-button">A chord progression
+                        <input [(ngModel)]="generationType" type="radio" value="chords" name="generationType">
+                        <span class="checkmark"></span>
+                    </label>
+                </form>
             </div>
             <div class="modal-footer">
-                <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-                <button type="button" class="btn btn-light">Generate</button>
+                <button type="button" class="btn btn-light" data-dismiss="modal">Close</button>
+                <button type="button" (click)="generate(generationType)" class="btn btn-success">Generate</button>
             </div>
         </div>
     </div>
