--- a/ClientApp/src/app/piano-roll.component.css
+++ b/ClientApp/src/app/piano-roll.component.css
@@ -178,64 +178,90 @@ ul {
     top:70px;
 }
 
-.custom-radio-button {
-  display: block;
-  position: relative;
-  padding-left: 20px;
-  cursor: pointer;
-  -webkit-user-select: none;
-  -moz-user-select: none;
-  -ms-user-select: none;
-  user-select: none;
-  font-weight:normal;
+.custom-radio-button, .custom-checkbox {
+    display: block;
+    position: relative;
+    padding-left: 20px;
+    cursor: pointer;
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
+    font-weight:normal;
 }
 
 /* Hide the browser's default radio button */
-.custom-radio-button input {
-  position: absolute;
-  opacity: 0;
+.custom-radio-button input, .custom-checkbox input {
+    position: absolute;
+    opacity: 0;
 }
 
 /* Create a custom radio button */
-.checkmark {
-  position: absolute;
-  top: 2px;
-  left: 0;
-  height: 15px;
-  width: 15px;
-  background-color: #eee;
-  border-radius: 50%;
+.radio {
+    margin:0;
+    position: absolute;
+    top: 2px;
+    left: 0;
+    height: 15px;
+    width: 15px;
+    background-color: #eee;
+    border-radius: 50%;
 }
 
+/* Create a custom checkbox */
+.checkmark {
+    margin:0;
+    position: absolute;
+    top: 2px;
+    left: 0;
+    height: 15px;
+    width: 15px;
+    background-color: #eee;
+}
+
+
 /* On mouse-over, add a grey background color */
-.custom-radio-button:hover input ~ .checkmark {
-  background-color: #ccc;
+.custom-radio-button:hover input ~ .radio, .custom-checkbox:hover input ~ .checkmark {
+    background-color: #ccc;
 }
 
 /* When the radio button is checked, add a blue background */
-.custom-radio-button input:checked ~ .checkmark {
-  background-color: #2196F3;
+.custom-radio-button input:checked ~ .radio, .custom-checkbox input:checked ~ .checkmark {
+    background-color: #2196F3;
 }
 
 /* Create the indicator (the dot/circle - hidden when not checked) */
-.checkmark:after {
-  content: "";
-  position: absolute;
-  display: none;
+.radio:after, .checkmark:after {
+    content: "";
+    position: absolute;
+    display: none;
 }
 
 /* Show the indicator (dot/circle) when checked */
-.custom-radio-button input:checked ~ .checkmark:after {
-  display: block;
+.custom-radio-button input:checked ~ .radio:after, .custom-checkbox input:checked ~ .checkmark:after {
+    display: block;
 }
 
 /* Style the indicator (dot/circle) */
-.custom-radio-button .checkmark:after {
-  top: 4px;
-  left: 4px;
-  width: 7px;
-  height: 7px;
-  border-radius: 50%;
-  background: white;
+.custom-radio-button .radio:after {
+    top: 4px;
+    left: 4px;
+    width: 7px;
+    height: 7px;
+    border-radius: 50%;
+    background: white;
+}
+
+/* Style the radio/indicator */
+.custom-checkbox .checkmark:after {
+    left: 5px;
+    top: 2px;
+    width: 5px;
+    height: 10px;
+    border: solid white;
+    border-width: 0 3px 3px 0;
+    -webkit-transform: rotate(45deg);
+    -ms-transform: rotate(45deg);
+    transform: rotate(45deg);
 }
 
