Consolidated generation functions

--- a/ClientApp/src/app/piano-roll.component.html
+++ b/ClientApp/src/app/piano-roll.component.html
@@ -22,7 +22,7 @@
                 </button>
             </div>
             <div class="modal-body">
-                 <form #f="ngForm">
+                 <form #generationForm="ngForm">
                     What would you like to generate?
                     <label class="custom-radio-button">
                         <input [(ngModel)]="generationType" type="radio" value="melody" name="generationType">A melody
@@ -42,7 +42,7 @@
             </div>
             <div class="modal-footer">
                 <button type="button" class="btn btn-light" data-dismiss="modal">Close</button>
-                <button type="button" (click)="generate(generationType)" class="btn btn-success" data-dismiss="modal">Generate</button>
+                <button type="button" (click)="generate(generationForm.value)" class="btn btn-success" data-dismiss="modal">Generate</button>
             </div>
         </div>
     </div>
