User can now choose to generate melodies contained in only a single octave

--- a/ClientApp/src/app/piano-roll.component.css
+++ b/ClientApp/src/app/piano-roll.component.css
@@ -178,6 +178,10 @@ ul {
     top:70px;
 }
 
+#generationModal input {
+    display:inline-block;
+}
+
 .custom-radio-button, .custom-checkbox {
     display: block;
     position: relative;
