--- a/ClientApp/src/app/piano-roll.component.html
+++ b/ClientApp/src/app/piano-roll.component.html
@@ -35,9 +35,15 @@
                     </label>
                     <hr/>
                     <label class='custom-checkbox'>Only generate notes within {{ configDataService.key }} {{ configDataService.scale.name }}
-                         <input [(ngModel)]="conformToKeyScale" type="checkbox" name="conformToKeyScale">
+                        <input [(ngModel)]="conformToKeyScale" type="checkbox" name="conformToKeyScale">
                         <span class="checkmark"></span>
                     </label>
+                    <label class='custom-checkbox' style='display:inline-block;margin-right:15px;'>
+                        Only generate notes in octave
+                        <input [(ngModel)]="octaveConstraintCheck" type="checkbox" name="octaveConstraintCheck">
+                        <span class="checkmark"></span>
+                    </label>
+                    <input class='form-control' style='width:70px' [(ngModel)]="octaveConstraint" type="number" name="octaveConstraint">
                 </form>
             </div>
             <div class="modal-footer">
