--- a/ClientApp/src/app/app.component.css
+++ b/ClientApp/src/app/app.component.css
@@ -76,7 +76,10 @@ button:focus, button:active, input:focus, input:active, select:focus, select:act
 
 .divider {
     border-right:solid 1px #1d626d;
-    height:100%;
+    height:40px;
+    display:inline-block;
+    top:0px;
+    position:absolute;
 }
 
 .top-bar-input-group:last-child .top-bar-input {
