--- a/ClientApp/src/app/app.component.html
+++ b/ClientApp/src/app/app.component.html
@@ -53,6 +53,7 @@
     </div>
     <div class='track'>
         <piano-roll (noteDrawn)="registerNoteDrawn($event)" [key]="configDataService.key" [scale]="configDataService.scale.name"></piano-roll>
+        <template #newPianoRoll></template>
     </div>
 </div>
 <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
